--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: index
+          path: index
 
       - name: Install netlify cli
         run: npm install -g netlify-cli
