--- a/.github/workflows/pipeline2.yml
+++ b/.github/workflows/pipeline2.yml
@@ -1,9 +1,9 @@
-name: Node JS build
+name: project 2
 
-#on:
-#push:
-#   branches:
-#     - main
+on:
+  push:
+    paths:
+      - project2/**
 
 jobs:
   build:
@@ -31,5 +31,5 @@ jobs:
         run: |
           netlify deploy --prod \
             --dir=. \
-            --site ${{ secrets.NELIFY_SITE_ID }} \
+            --site ${{ secrets.NELIFY_SITE2_ID }} \
             --auth ${{ secrets.NELIFY_API_TOKEN }}
