--- a/.github/workflows/ms.yml
+++ b/.github/workflows/ms.yml
@@ -14,4 +14,4 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Copy to Windows Server
-        run: sshpass -p ${{ secrets.MS_PASS }} scp alimoosa.html ${{ secrets.MS_USER }}@${{ secrets.MS_IP }}:'C:\inetpub\wwwroot\' -o StrictHostKeyChecking=no
+        run: sshpass -p \"${{ secrets.MS_PASS }}\" scp alimoosa.html ${{ secrets.MS_USER }}@${{ secrets.MS_IP }}:'C:\inetpub\wwwroot\' -o StrictHostKeyChecking=no
