--- a/.github/workflows/ms.yml
+++ b/.github/workflows/ms.yml
@@ -1,9 +1,9 @@
 name: Node JS build
 
-on:
-  push:
-    branches:
-      - main
+#on:
+#  push:
+#    branches:
+#      - main
 
 jobs:
   deploymentJob:
